refactor: Refatoração na tratativa de error + implementação da exceção personalizada - BadRequestException